--- a/public/epub_content/Cadavreexquis2/OEBPS/Text/cover.xhtml
+++ b/public/epub_content/Cadavreexquis2/OEBPS/Text/cover.xhtml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8" standalone="no"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
-  "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" xmlns:epub="http://www.idpf.org/2007/ops">
-<link href="../Style/style.css" rel="stylesheet" type="text/css"/>
+
 <head>
-  <title>my Poem</title>
+  <title>Cadavre Exquis</title>
+  <link href="../Style/style.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
-  <p><img alt="my Poem" src="../Image/cover.jpg" class="center"/></p>
+  <p><img alt="Cadavre Exquis" src="../Image/cover.jpg" class="center"/></p>
 </body>
 </html>
