--- a/public/index.html
+++ b/public/index.html
@@ -45,16 +45,7 @@
 			// whenever someone who was previously logged out tries to log in again, the correct case below
 			// will be handled.
 			FB.Event.subscribe('auth.authResponseChange', function(response) {
-				// Here we specify what we do with the response anytime this event occurs.
 				if (response.status === 'not_authorized' || response.status === 'unknown') {
-					// In this case, the person is logged into Facebook, but not into the app, so we call
-					// FB.login() to prompt them to do so.
-					// In real-life usage, you wouldn't want to immediately prompt someone to login
-					// like this, for two reasons:
-					// (1) JavaScript created popup windows are blocked by most browsers unless they
-					// result from direct interaction from people using the app (such as a mouse click)
-					// (2) it is a bad experience to be continually prompted to login upon page load.
-					//alert("You are logged in but not_authorized!");
 					FB.login();
 				init();
 				}
@@ -179,7 +170,7 @@
 		}
 
 		function debug_displayFriends(){
-			console.log("Friends :");
+			console.log("Debug -- Friends :");
 			for (var i=0; i<friends.length; i++){
 				console.log(friends[i]);
 			}
