--- a/public/epub_content/Cadavreexquis2/OEBPS/Text/cover.xhtml
+++ b/public/epub_content/Cadavreexquis2/OEBPS/Text/cover.xhtml
@@ -4,10 +4,11 @@
 
 <head>
   <title>Cadavre Exquis</title>
+  <meta name="viewport" content="width=512, height=748" />
   <link href="../Style/style.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
-  <p><img alt="Cadavre Exquis" src="../Image/cover.jpg" class="center"/></p>
+  <img alt="Cadavre Exquis" src="../Image/cover.jpg"/>
 </body>
 </html>
