push de l'Epub Story

--- a/public/epub_content/EpubStory/EPUB/EpubStory3.xhtml
+++ b/public/epub_content/EpubStory/EPUB/EpubStory3.xhtml
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8"></meta>
 		<title>Un Epub dont vous êtes le lecteur</title>
-		<link rel="stylesheet" type="text/css" href="cs/style.css" class="day" title="day"/> 
+		<link rel="stylesheet" type="text/css" href="css/style.css" class="day" title="day"/> 
 
 	</head>
 
