--- a/public/epub_content/EpubStory/EPUB/EpubStory5.xhtml
+++ b/public/epub_content/EpubStory/EPUB/EpubStory5.xhtml
@@ -3,7 +3,6 @@
 	xmlns:epub="http://www.idpf.org/2007/ops">
 	<head>
 		<meta charset="utf-8"></meta>
-		<meta http-equiv="X-UA-Compatible" content="IE=8" />
 		<meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0'/>
 
 		<title>Un Epub dont vous êtes le lecteur</title>
@@ -46,7 +45,6 @@
     <div><b><img src="Images/rond3.png" /></b></div>
     <div><b><img src="Images/rond4.png" /></b></div>
     <div><b><img src="Images/rond5.png" /></b></div>
-    <div><b><img src="Images/rond6.png" /></b></div>
     <div><b><img src="Images/rond7.png" /></b></div>
     <div><b><img src="Images/rond8.png" /></b></div>
     <div><b><img src="Images/rond9.png" /></b></div>
@@ -54,7 +52,6 @@
     <div><b><img src="Images/rond9.png" /></b></div>
     <div><b><img src="Images/rond8.png" /></b></div>
     <div><b><img src="Images/rond7.png" /></b></div>
-    <div><b><img src="Images/rond6.png" /></b></div>
     <div><b><img src="Images/rond5.png" /></b></div>
     <div><b><img src="Images/rond4.png" /></b></div>
     <div><b><img src="Images/rond3.png" /></b></div>
@@ -80,24 +77,25 @@
   <div>
     <a href="EpubStory6.xhtml">Allez au chapitre 6</a><br />
   </div>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<!-- Styles <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>-->
+
 <script src='scripts/swipe.js'></script>
 <script>
 
-// pure JS
+<!-- pure JS-->
 $ elem = document.getElementById('mySwipe');
 window.mySwipe = Swipe(elem, {
-    startSlide: 10,
+   <!-- startSlide: 10,
    // auto: 3000,
    // continuous: true,
    // disableScroll: true,
    // stopPropagation: true,
    // callback: function(index, element) {},
-   // transitionEnd: function(index, element) {}
+   // transitionEnd: function(index, element) {}-->
 });
 
-// with jQuery
-// window.mySwipe = $('#mySwipe').Swipe().data('Swipe');
+<!-- with jQuery
+// window.mySwipe = $('#mySwipe').Swipe().data('Swipe');-->
 
 </script>
 </body>
