--- a/public/epub_content/EpubStory/EPUB/nav.xhtml
+++ b/public/epub_content/EpubStory/EPUB/nav.xhtml
@@ -3,7 +3,7 @@
 	xmlns:epub="http://www.idpf.org/2007/ops">
 	<head>
 		<meta charset="utf-8"></meta>		
-		<link rel="stylesheet" type="text/css" href="styles/style.css" class="day" title="day"/> 
+		<link rel="stylesheet" type="text/css" href="css/style.css" class="day" title="day"/> 
 	</head>
 	<body>
 		<nav epub:type="toc" id="toc">			
@@ -17,13 +17,6 @@
 
 			</ol>			
 		</nav>
-		<nav epub:type="landmarks">
-			<ol>
-				<li><a epub:type="frontmatter" href="content.xhtml#frontmatter"
-						>frontmatter</a></li>
-				<li><a epub:type="bodymatter" href="content.xhtml#bodymatter"
-						>bodymatter</a></li>
-			</ol>
-		</nav>
+		
 	</body>
 </html>
