Updated Fonts, updated description layout.

--- a/public/epub_content/goldenframe-propaganda/EPUB/nav.xhtml
+++ b/public/epub_content/goldenframe-propaganda/EPUB/nav.xhtml
@@ -9,6 +9,7 @@
 		<nav epub:type="toc" id="toc">			
 			<ol>
 				<li><a href="index.xhtml">Golden Frame Propaganda</a></li>
+				<li><a href="description.xhtml">Description</a></li>
 				<li><a href="content.xhtml">Elections</a></li>
 				<li><a href="goldenframe2.xhtml">Youth</a></li>
 				<li><a href="goldenframe3.xhtml">Power</a></li>
