--- a/public/index.html
+++ b/public/index.html
@@ -25,12 +25,15 @@
     </head>
 <body>
 	<div id="fb-root"></div>
-	<fb:login-button id="FB_login"></fb:login-button>
+	<div id="readerInfos">
+		<fb:login-button id="FB_login"></fb:login-button>
+	</div>
+
 	<script>
 
 		var shrinkBarId; // intervaled function’s id
 		var friends = new Array();
-		var friendMeterSpeed = 10; // the lower the faster
+		var friendMeterSpeed = 30; // the lower the faster
 
 		window.fbAsyncInit = function() {
 			FB.init({
@@ -73,7 +76,7 @@
 						setFriendsArray(friends);
 						debug_displayFriends();
 						document.getElementById("friendMeter-bar").style.width = "98%";
-						setFriendMeterCounterHTML();
+						//setFriendMeterCounterHTML();
 						shrinkBarId = setInterval(shrinkBar, friendMeterSpeed);
 					});
 
@@ -85,13 +88,13 @@
 
 		function toggleFBLogin(_displayLogin){
 			if (_displayLogin){
-				document.getElementById("FB_login").style.display = "block";
+				document.getElementById("readerInfos").style.display = "block";
 				document.getElementById("FB_logout").style.visibility = "hidden";
 				document.getElementById("readiumContainer").style.display = "none";
 				document.getElementById("friendMeter").style.visibility = "hidden";
 				document.getElementById("friendMeter").style.height = "0px";
 			}else {
-				document.getElementById("FB_login").style.display = "none";
+				document.getElementById("readerInfos").style.display = "none";
 				document.getElementById("FB_logout").style.visibility = "visible";
 				document.getElementById("readiumContainer").style.display = "block";
 				document.getElementById("friendMeter").style.visibility = "visible";
@@ -108,14 +111,24 @@
 
 			// FRIEND LOST !
 			if (parseInt(elem.style.width) <= 0){
-				displayLostFriend();
-				setFriendMeterCounterHTML();
+				//setFriendMeterCounterHTML();
+				playFBCrossAnim();
 				if (friends.length > 0){
 					elem.style.width = "98%";
 				} else {
 					clearInterval(shrinkBarId);
 				}
 			}
+		}
+
+		function playFBCrossAnim(){
+			document.getElementById("friendMeter-cross").style.backgroundImage = "url(../images/FBCross_small.gif)";
+			setTimeout(function(){
+				displayLostFriend();
+			}, 1000);
+			setTimeout(function(){
+				document.getElementById("friendMeter-cross").style.backgroundImage = "url(../images/FBCross.png)"
+			}, 2500);
 		}
 
 		function setFriendsArray(_friends){
@@ -211,9 +224,12 @@
 			<!-- Friend Meter --!>
 			<div id="friendMeter">
 				<div id="friendMeter-bar"></div>
+				<div id="friendMeter-cross"></div>
+				<!--
 				<div id="friendMeter-counter">
-					<div id= "friendMeter-counter-text"></div>
+					div id= "friendMeter-counter-text"></div>
 				</div>
+				-->
 				<div id="friendMeter-friendData">
 					<div id= "friendMeter-friendData-text"></div>
 				</div>
