changed background images, fonts, miss en page

--- a/public/epub_content/Cadavreexquis2/OEBPS/Text/cover.xhtml
+++ b/public/epub_content/Cadavreexquis2/OEBPS/Text/cover.xhtml
@@ -9,6 +9,6 @@
 </head>
 
 <body>
-  <img alt="Cadavre Exquis" src="../Image/cover.jpg"/>
+  <img id="fullsize" alt="Cadavre Exquis" src="../Image/cover.png"/>
 </body>
 </html>
