--- a/public/epub_content/Cadavreexquis2/OEBPS/Text/toc.xhtml
+++ b/public/epub_content/Cadavreexquis2/OEBPS/Text/toc.xhtml
@@ -13,6 +13,10 @@
         <ol>
           <li><a href="../Text/cover.xhtml">Cover</a></li>
           <li><a href="../Text/text1.xhtml">Interactive Layout</a></li>
+          <li><a href="../Text/text2.xhtml">Interactive Layout</a></li>
+          <li><a href="../Text/text3.xhtml">Interactive Layout</a></li>
+          <li><a href="../Text/text4.xhtml">Interactive Layout</a></li>
+          <li><a href="../Text/text5.xhtml">Interactive Layout</a></li>
         </ol>
       </nav>
   </body>
